tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p15_mixed_decl_and_expr_assignment_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Let:
        name: x
        kind: MutableStatic
        value:
          Number: 5
    - Let:
        name: y
        kind: MutableStatic
        value:
          Assign:
            left:
              Var: x
            right:
              Number: 10
            op: Assign
  modules: []
  globals: []
  entry: ~
stmts:
  - Let:
      name: x
      kind: MutableStatic
      value:
        Number: 5
  - Let:
      name: y
      kind: MutableStatic
      value:
        Assign:
          left:
            Var: x
          right:
            Number: 10
          op: Assign
