tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p16_decl_does_not_break_expression_assignment_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Let:
        name: x
        kind: MutableStatic
        value:
          Number: 5
    - Let:
        name: z
        kind: MutableStatic
        value:
          Binary:
            left:
              Assign:
                left:
                  Var: x
                right:
                  Number: 10
                op: Assign
            op: Add
            right:
              Number: 1
  modules: []
  globals: []
  entry: ~
stmts:
  - Let:
      name: x
      kind: MutableStatic
      value:
        Number: 5
  - Let:
      name: z
      kind: MutableStatic
      value:
        Binary:
          left:
            Assign:
              left:
                Var: x
              right:
                Number: 10
              op: Assign
          op: Add
          right:
            Number: 1
