tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p18_member_assignment_with_expression_assignment_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Assign:
            left:
              Member:
                target:
                  Var: a
                field: b
            right:
              Assign:
                left:
                  Var: c
                right:
                  Number: 3
                op: Assign
            op: Assign
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Assign:
          left:
            Member:
              target:
                Var: a
              field: b
          right:
            Assign:
              left:
                Var: c
              right:
                Number: 3
              op: Assign
          op: Assign
