tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p22_test_variable_declarations_2.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Let:
        name: y
        kind: Immutable
        value:
          Number: 10
  modules: []
  globals: []
  entry: ~
stmts:
  - Let:
      name: y
      kind: Immutable
      value:
        Number: 10
