tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p22_test_variable_declarations_3.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Let:
        name: z
        kind: Dynamic
        value:
          Number: 5
  modules: []
  globals: []
  entry: ~
stmts:
  - Let:
      name: z
      kind: Dynamic
      value:
        Number: 5
