tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p23_modulo_precedence_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Number: 1
            op: Add
            right:
              Binary:
                left:
                  Binary:
                    left:
                      Number: 2
                    op: Mod
                    right:
                      Number: 3
                op: Mul
                right:
                  Number: 4
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Number: 1
          op: Add
          right:
            Binary:
              left:
                Binary:
                  left:
                    Number: 2
                  op: Mod
                  right:
                    Number: 3
              op: Mul
              right:
                Number: 4
