tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p24_exponentiation_right_associative_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Var: a
            op: Power
            right:
              Binary:
                left:
                  Var: b
                op: Power
                right:
                  Var: c
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Var: a
          op: Power
          right:
            Binary:
              left:
                Var: b
              op: Power
              right:
                Var: c
